Blackpurl/src/objects/QB_TaxCode__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_QB_Tax_Rates__c</fullName>
        <description>Stores a semicolon separated list of Accounting Id for Child tax Rate on QB</description>
        <label>Applicable QB Tax Rates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Taxable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Value__c</fullName>
        <description>Stores the combined rate values from child tax rates</description>
        <label>Rate Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Applicable_On__c</fullName>
        <label>Tax Applicable On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Code_Sync_Response__c</fullName>
        <label>Tax Code Sync Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>QB TaxCode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Id__c</columns>
        <columns>Applicable_QB_Tax_Rates__c</columns>
        <columns>Is_Taxable__c</columns>
        <columns>Rate_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QB TaxCode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB TaxCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>